# verifpal

./: .drone.yml  .gitignore  .gitlab-ci.yml  .golangci.yml  .goreleaser.yml  Build.cmd  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FOSS.md  LICENSE  Makefile  README.md  SECURITY.md  default.nix  go.mod  go.sum  go.sum.license  rustfmt.toml  snapcraft.yaml  verifpal.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
HomebrewFormula/: verifpal.rb
assets/: email.txt  pgp.txt  releasenotes.txt  versioninfo.json
bucket/: verifpal.json
coq/: Makefile  generateheader.go  signal.v
examples/: blind.vp  cen.vp  challengeresponse.vp  dp-3t.vp  ephemerals_and_signature.vp  firefoxsync.vp  lc-dp-3t.vp  model_that_takes_a_long_time.vp  monokex.vp  needham-schroeder-pk.vp  needham-schroeder.vp  pke_test.vp  problematic.vp  protonmail.vp  protonmail_to_outside.vp  scuttlebutt.vp  scuttlebutt_handshake.vp  scuttlebutt_simple.vp  shamir_test.vp  signal.vp  signal_simpler_kdf.vp  signal_small.vp  simple.vp  subkey.vp  tls13.vp  userbase.vp
nix/: shell.nix  sources.json
scripts/: brew.sh  email.sh  git.sh  packages.sh  snap.sh  tag.sh
src/: attackerstate.rs  construct.rs  context.rs  deduction.rs  equivalence.rs  hashing.rs  info.rs  inject.rs  json.rs  lib.rs  main.rs  mutationmap.rs  narrative.rs  parser.rs  possible.rs  pretty.rs  primitive.rs  principal.rs  query.rs  resolution.rs  rewrite.rs  sanity.rs  theory.rs  tui.rs  types.rs  util.rs  value.rs  verifhub.rs  verify.rs  verifyactive.rs  verifyanalysis.rs  verifyresults.rs
(+253 files in other folders)
